# nav2_scenario_runner

./: .dockerignore  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  action.yml  plan.md  pyproject.toml
.github/ISSUE_TEMPLATE/: benchmark-submission.yml
.github/workflows/: benchmark-pr.yml  ci.yml  nav2-benchmark.yml  pages.yml  (+1 more)
docker/: Dockerfile  foxglove-demo.compose.yml  run_benchmark.sh
docs/: .nojekyll  badge-passrate.json  badge-regressions.json  badge-score.json  badge-winner.json  ci.md  demo-capture.md  doctor.md  evaluation.html  evaluation.json  evaluation.md  gazebo-sim.md  index.html  master-architecture.md  measured-trend.html  measured-trend.json  measured-viewer.html  metrics.md  nav2-benchmark-ci.md  plugin-authoring.md  pr-benchmark-bot.md  replay.html  replay.md  robot-profiles.md  scenario-dsl.md  simulator-adapters.md  submission-review.md  trend.html  trend.json  trend.md  viewer.html  viewer.md
schemas/: nav2.scenario.v1alpha1.schema.json
scripts/: build_dashboards.sh  record_browser_demo.py  record_nav2_foxglove_demo.sh  spike_foxglove_stack.sh  spike_foxglove_webgl.py  spike_foxglove_webgl.sh
tests/: test_assertions.py  test_badges.py  test_benchmark_fixtures.py  test_benchmark_scenarios.py  test_cli.py  test_compare.py  test_doctor.py  test_evaluate.py  test_examples.py  test_execution.py  test_gazebo_sim_backend.py  test_history.py  test_pr_comment.py  test_replay.py  test_report_view.py  test_reporting.py  test_schema_assets.py  test_submission.py  test_viewer.py
(+45 files in other folders)
